// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages.vue renders correctly 1`] = `<div class="messages"></div>`;

exports[`Messages.vue set msgs with on error item check snapshot 1`] = `
<div class="messages">
  <div if="true" class="notification is-danger">bye</div>
</div>
`;

exports[`Messages.vue set msgs with one item check snapshot 1`] = `
<div class="messages">
  <div if="true" class="notification is-info">hi</div>
</div>
`;
